# incentive-mechanism-app-cluster

./: .bandit.yml  .gitignore  .gitlab-ci.yml  .prospector.yaml  Dockerfile.dev  Dockerfile.prod  LICENSE  README.md  dev.env  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml
agatha/: __init__.py  main.py  study_main.py
agatha/backend/: __init__.py
agatha/backend/data_persistence/: __init__.py  crud.py  data_access_object.py  database.py  models.py  study_crud.py  study_models.py
agatha/backend/incentive_mechanism/: __init__.py  incentive.py  router.py
agatha/backend/study/: __init__.py  vignette_generator.py
agatha/static/css/: bootstrap-reboot.min.css  bootstrap-utilities.min.css  styles.css
agatha/static/js/: brython.min.js
agatha/static/py/: employees.py  logout.py  mechanism.py  questions.py  study.py  user_survey.py
agatha/util/: __init__.py  config.py  consts.py  logger.py
agatha/web_services/: __init__.py
agatha/web_services/configuration/: __init__.py  app.py  configuration.py
agatha/web_services/study/: __init__.py  router.py  vignette_logic.py
agatha/web_services/temp_user_management/: __init__.py  user_management_logic.py
executables/: add_sample_data  add_sample_data.py  add_sample_study_data.py  init_database.py  reset_db_run_dev.sh  run-agatha.py  run-study.py
tests/: __init__.py  test_agatha.py  test_config.py  test_data_persistence.py  test_data_persistence_dynamic.py  test_logger.py  test_mechanism.py  test_singleton.py  test_survey_service.py  test_temporary_user_management.py  test_vignette_generation.py
(+26 files in other folders)
