[tool.poetry]
name = "agatha"
version = "1.0.0"
description = ""
authors = ["Valentin Zieglmeier <zieglmev@in.tum.de>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
Jinja2 = "^3.1.2"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.39"
python-multipart = "^0.0.5"
click = "^8.1.3"
more-itertools = "^8.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
prospector = {extras = ["with_mypy", "with_bandit"], version = "^1.7.7"}
pylint = "^2.14.4"
mypy = "^0.961"
bandit = "^1.7.4"
pydocstyle = "^6.1.1"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.39"}
Faker = "^13.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
